improve ClassSearcher performance